--- a/style_m.css
+++ b/style_m.css
@@ -46,14 +46,14 @@ h3 {
   height: 3rem;
   margin-left: 1rem;
   margin-right: 1rem;
-  font-size: 2rem;
+  font-size: 24px;
 }
 
 #captureButton {
   width: 12rem;
   height: 3rem;
   margin-left: 2rem;
-  font-size: 2rem;
+  font-size: 24px;
 }
 
 #inputVideo {
