--- a/style_m.css
+++ b/style_m.css
@@ -42,18 +42,18 @@ h3 {
 }
 
 #camera {
-  width: 12rem;
-  height: 3rem;
+  width: 14rem;
+  height: 3.5rem;
   margin-left: 1rem;
   margin-right: 1rem;
-  font-size: 24px;
+  font-size: 228px4px;
 }
 
 #captureButton {
-  width: 12rem;
-  height: 3rem;
+  width: 14rem;
+  height: 3.5rem;
   margin-left: 2rem;
-  font-size: 24px;
+  font-size: 28px;
 }
 
 #inputVideo {
