--- a/style_d.css
+++ b/style_d.css
@@ -56,6 +56,9 @@ h3 {
   z-index: 1;
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
+  outline-style: none
+  outline-color: lightgreen;
+  outline-width: thick; 
 }
 
 #capture {
@@ -65,7 +68,7 @@ h3 {
   grid-row: 1;
   z-index: 2;
   -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
+  transform: scaleX(-1);  
 }
 
 #capture1 {
